# XJTU-RMV-Task04

./: CMakeLists.txt  README.md  angle_data.out  main.cpp
include/: CameraControl.hpp  VideoProcessor.hpp
model_data/: SVHN_model_script.pt  model_script_log_softmax.pt  model_script_logits.pt
src/: CameraControl.cpp  VideoProcessor.cpp
